feat(sinks): add user anomaly result outputs